--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
 		<title>Astro</title>
+		<style lang="scss">
+			h1 { color: salmon }
+		</style>
 	</head>
 	<body>
 		<h1>Astro</h1>
